# Parallel-Algorithm-Final-Project

./: README.md
cpu_final/: CMakeLists.txt  main.cpp
gpu/BH_Final/: CMakeLists.txt  README.md  main.cu
gpu/DS_Final/: CMakeLists.txt  README.md  main.cu
